--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: caddy-config
-data:
-  Caddyfile: |
-    :8080 {
-      root * /usr/share/caddy
-      file_server
-      log {
-        output stdout
-      }
-    }
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: caddy-config
+# data:
+#   Caddyfile: |
+#     :8080 {
+#       root * /usr/share/caddy
+#       file_server
+#       log {
+#         output stdout
+#       }
+#     }
